[tool.poetry]
name = "udacity-simulator-dataset"
version = "0.1.0"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.1.0"
tensorflow-estimator = "^2.1"
tfa-nightly = "0.9.0.dev20200319133743"
typer = "^0.1.0"
dataget = "^0.4.9"
dicto = "^0.2.0"
pyarrow = "^0.16.0"
socketio = "^0.2.1"
flask = "^1.1.1"
pillow = "^7.0.0"
eventlet = "^0.25.1"
python-socketio = "^4.5.0"
plotly = "^4.5.4"
imbalanced-learn = "^0.6.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
